--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,6 +12,18 @@
     </div>
 </header>
 
+{{#if !blogs.length}}
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 col-l-8">
+            <div class="post-preview">
+                <h2 class="post-title">No posts yet. <span href="/api/blog/post">Create your first post!</span></h2>
+            </div>
+        </div>
+    </div>
+</div>
+{{/if}}
+
 {{#if blogs.length}}
 <div class="container">
     <div class="row">
@@ -28,3 +40,4 @@
         </div>
     </div>
 </div>
+{{/if}}
