Forgot to add session stuff to server. done.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,10 @@
-<header class="masthead" style="background-image: url('assets/img/home-bg.jpg');">
+<header class="masthead" style="background-image: url('../public/images/marvin-meyer-SYTO3xs06fU-unsplash_adobe_express.svg');">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto position-relative">
                 <div class="site-heading">
-                    <h1 style="font-size: 56px;">&lt;TechTalk/&gt;</h1><span class="subheading">An open blog-spot for
-                        all things tech</span>
+                    <h1 style="font-size: 56px;">The Do Your Research blog</h1><span class="subheading">An open blog-spot for all things tech.</span>
                 </div>
             </div>
         </div>
