Now is a great time to stop. Woring on getting dashboard to render. Information seems to be loading, but everything that is rendering thats new to the page is layered over the content of the main template. Gunna head back home and hopefully have fresh eyes by then. Might be a good time to bail and work on project two. I wont have an MVP by tomorrow night.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,19 @@
-{{#if loggedIn}}
-{{#if !blogs.length}}
+{{#if userBlogs.length}}
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 col-lg-8">
+            {{#each userBlogs as |userBlog|}}
+            <div class="post-preview">
+                <a href=`/api/blog/{{userBlog.id}}`>
+                    <h2 class="post-title">{{userBlog.post_title}}</h2>
+                </a>
+                <p class="post-meta">Posted by&nbsp;<a href="#">{{userBlog.user.name}} on {{userBlog.date_id}}</a></p>
+            </div>
+            {{/each}}
+        </div>
+    </div>
+</div>
+{{else}}
 <div class="container">
     <div class="row">
         <div class="col-md-10 col-l-8">
@@ -9,23 +23,4 @@
         </div>
     </div>
 </div>
-{{/if}}
-
-{{#if blogs.length}}
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-lg-8">
-            {{#each fiveBlogs as |blog|}}
-            <div class="post-preview">
-                <a href=`/api/blog/{{blog.id}}`>
-                    <h2 class="post-title">{{blog.post_title}}</h2>
-                </a>
-                <p class="post-meta">Posted by&nbsp;<a href="#">{{blog.user.name}} on {{blog.date_id}}</a></p>
-            </div>
-            {{/each}}
-        </div>
-    </div>
-</div>
-{{else}}
-<a href="/login">You must login first to view this page</a>
-{{/if}}
+{{/if}} 
